# simple-client-server-architecture

./: CMakeLists.txt  LICENSE  README.md  bench_test.c  client.c  server.c
